# PAS

./: README.md
fanuc_crx10ia_support/: CMakeLists.txt  package.xml
fanuc_crx10ia_support/config/: controllers.yaml
fanuc_crx10ia_support/launch/: ros2_control.launch.py
install/: local_setup.sh  setup.sh
install/fanuc_crx10ia_support/lib/fanuc_crx10ia_support/: publish_joint_trajectory.py
install/fanuc_crx10ia_support/share/ament_index/resource_index/package_run_dependencies/: fanuc_crx10ia_support
install/fanuc_crx10ia_support/share/fanuc_crx10ia_support/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/fanuc_crx10ia_support/share/fanuc_crx10ia_support/cmake/: fanuc_crx10ia_supportConfig.cmake
install/fanuc_crx10ia_support/share/fanuc_crx10ia_support/launch/: display.launch.py  publish_joint_positions.launch.py  publish_joint_positions.py  publish_joint_trajectory.launch.py
install/fanuc_crx10ia_support/share/fanuc_crx10ia_support/urdf/: crx10ial.ros2_control.xacro  crx10ial.xacro
install/fanuc_resources/share/fanuc_resources/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/fanuc_resources/share/fanuc_resources/cmake/: fanuc_resourcesConfig.cmake
log/: latest_build
